# Projeto_Integrador

./: .gitignore  README.md
Assets/: Cores-CSS
Assets-Login&cadastro/: Cores.txt
Assets/Fontes/: ConfigsFonte
DB/: Script banco de Dados Delivery_2.txt  script_banco_delivery_2.sql
DB/tests/: pyproject.toml
DB/tests/teste_bd1/: testeBD.py
Docs/: FeedBack - 3°Semestre
LandingPage/: cadastro.html  index.html  login.html
LandingPage/assets/css/: cadastro.css  login.css  style.css
PecaAi/: app.js  package-lock.json  package.json
PecaAi/config/: config.json
PecaAi/controllers/: cardapio.controller.js  index.controller.js
PecaAi/migrations/: 20240923001810-create-item-cardapio.js  20240923002413-create-item-categoria.js
PecaAi/models/: itemcardapio.js  itemcategoria.js
PecaAi/public/: index.html
PecaAi/public/assets/css/: avaliacoes.css  inicio.css  meu_cardapio.css  relatorios.css
PecaAi/public/assets/js/: app.js  meu_cardapio.js
PecaAi/public/assets/js/produtos/: produtos.json
PecaAi/public/pages/: dashboard.html  inicio.html  meu_cardapio.html  pedidos.html  relatorios.html
PecaAi/routes/: cardapio.js  index.js
PecaAiPages/: index.html
PecaAiPages/assets/css/: meu_cardapio.css  style.css
PecaAiPages/assets/etc/: Cores-CSS
PecaAiPages/assets/js/: app.js  meu_cardapio.js
PecaAiPages/pages/: avaliacoes.html  dashboard.html  inicio.html  meu_cardapio.html  pedidos.html  relatorios.html
